# TodoFastApiUserNextJs

./: .gitignore  DEPLOYMENT.md  railway.json  railway.toml  vercel.json
Backend/todo/: pyproject.toml
Backend/todo/src/todo/: auth.py  main.py  setting.py
frontend/: package-lock.json  package.json  types.d.ts
frontend/src/actions/: action.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: EditTask.tsx  Navbar.tsx  ProtectedRoute.tsx  SubmitButton.tsx  ToolTip.tsx  addTask.tsx  task.tsx  todoTable.tsx
frontend/src/components/ui/: Modal.tsx
frontend/src/lib/: api.ts
